--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>CSC418/2504 Assignment 3: Animation</title>
 
-    <script src="three.js"></script>
-    <script src="ammo.js"></script>
-
+    <script src="Libraries/three.js"></script>
   </head>
 
   <body>
     <div id="container"></div>
 
-    <script src="detector.js"></script>
-    <script src="orbitControl.js"></script>
+    <script src="Configs/config.js"></script>
+    
+    <script src="Controls/init.js"></script>
+    <script src="Controls/animate.js"></script>
 
-    <script src="main.js"></script>
+    <script src="Controls/main.js"></script>
   </body>
 </html>
